# clumpy

./: .travis.yml  CMakeLists.txt  Pipfile  README.md  bridson_points.cc  clumpy.cc  clumpy_command.hh  curl_2d.cc  generate_dshapes.cc  generate_simplex.cc  main_clumpy.cc  splat_points.cc  test.cc  test_clumpy.cc  visualize_sdf.cc
commands/: advect_points.cc  bridson_points.cc  cgal_streamlines.cc  cull_points.cc  curl_2d.cc  generate_dshapes.cc  generate_simplex.cc  gradient_noise.cc  infinite_zoom.cc  pendulum_phase.cc  pendulum_render.cc  simulate_pendulum.cc  splat_points.cc  test_clumpy.cc  test_embree.cc  visualize_sdf.cc
extras/: blog.py  example5.py  example6.py  experiments.py  island.py  pendulum.py  pendulum_video.py  test.py
